changed css link to solve gh-pages layout issues

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -112,5 +112,15 @@
             margin-left: auto;
             overflow: scroll;
         }
+        #animation {
+            width: 100vw;
+            height: 100vh;
+            padding:0;
+            margin:0;
+            overflow:hidden; 
+        }
+        body{
+            margin:0;
+          }
     }
  };
